<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_dash"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />

    </group>

    <item android:title="@string/experience">
        <menu>
            <item
                android:id="@+id/nav_know_the_app"
                android:icon="@drawable/ic_help"
                android:title="@string/know_the_app" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>
</menu>