<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeatureActivities.RegisterStage2Activity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham"
        android:text="@string/some_more_info"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham"
        android:text="@string/to_cater_you_better"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <LinearLayout
        android:id="@+id/linLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:rotation="-20"
            android:src="@drawable/ic_weight" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/ic_health" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:rotation="20"
            android:src="@drawable/ic_height" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/proceedBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linLay1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInput"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/cm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInput"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textColorHint="@color/grey">

                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/kg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_bg">

            <Spinner
                android:id="@+id/diseasesSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/diseases_list" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>