<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:clipChildren="true"
    android:clipToPadding="false"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardBtnsGrid"

        >
        <com.google.android.gms.maps.MapView
            android:id="@+id/userLocMapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/liveExtendedFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="160dp"
        android:layout_marginTop="5dp"
        style="@style/start_live"
        android:textAllCaps="false"
        android:fontFamily="@font/gotham"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/userDetailsLinLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:visibility="gone"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="56dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Hey, User"
                android:textColor="@color/text_grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/noteLinLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_height" />

                <TextView
                    android:id="@+id/userAddressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="Some details"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_line"
        app:layout_constraintTop_toBottomOf="@id/userDetailsLinLay"
        android:visibility="gone"
        />

    <GridLayout
        android:id="@+id/cardBtnsGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:columnCount="2"
        android:paddingBottom="3dp"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/myNearOnesCard"
            style="@style/DashSquareCard"
            android:layout_row="0"
            android:layout_column="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/DashCardImageView"
                    android:src="@drawable/ic_family" />

                <TextView
                    style="@style/DashCardTextView"
                    android:layout_height="wrap_content"
                    android:text="@string/my_near_ones" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/allAlertsCard"
            style="@style/DashSquareCard"
            android:layout_row="0"
            android:layout_column="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/DashCardImageView"
                    android:src="@drawable/ic_alert" />

                <TextView
                    style="@style/DashCardTextView"
                    android:layout_height="wrap_content"
                    android:text="@string/all_alerts" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/triggerSOSCard"
            style="@style/DashSquareCard"
            android:layout_row="1"
            android:layout_column="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/DashCardImageView"
                    android:src="@drawable/ic_sos" />

                <TextView
                    style="@style/DashCardTextView"
                    android:layout_height="wrap_content"
                    android:text="@string/notify_my_near_ones" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/callPoliceCard"
            style="@style/DashSquareCard"
            android:layout_row="1"
            android:layout_column="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/DashCardImageView"
                    android:src="@drawable/ic_siren" />

                <TextView
                    style="@style/DashCardTextView"
                    android:layout_height="wrap_content"
                    android:textColor="@color/reject_red"
                    android:text="@string/call_police" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

    <LinearLayout
        android:id="@+id/btnsLinLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:visibility="gone"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myNearOnesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="My Near-ones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myAlertsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="My Alerts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/myNearOnesBtn"
            app:layout_constraintRight_toLeftOf="@id/triggerAlertBtn"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/triggerAlertBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="Trigger Alert"
            app:backgroundTint="@color/design_default_color_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
