<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_bhaina"
                android:text="About Us"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="4dp"
                android:background="@color/pinkAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/appIntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/app_intro"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/item_text_size"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="Developed with"
                    android:textColor="@color/text_light_grey"
                    android:textSize="@dimen/item_text_size_small" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="heart.json"
                    app:lottie_loop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:text="by"
                    android:textColor="@color/text_light_grey"
                    android:textSize="@dimen/item_text_size_small"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/developerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/team_name"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size_big"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view1"
                    android:layout_width="20dp"
                    android:layout_height="1.5dp"
                    android:layout_centerVertical="true"
                    android:background="@color/pinkAccent" />

                <TextView
                    android:id="@+id/devTeamNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:layout_toRightOf="@id/view1"
                    android:fontFamily="@font/gotham"
                    android:text="  Team Blason  "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/item_text_size_small"
                    android:textStyle="normal" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="20dp"
                    android:layout_height="1.5dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/devTeamNameText"
                    android:background="@color/pinkAccent" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/visitUsCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="@color/light_orange_chip_card"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_globe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visit_us"
                        android:textColor="@color/text_link"
                        android:textSize="15sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/contactDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Contact Developer"
            android:textColor="@color/text_link"
            android:visibility="gone" />

        <!--
                <TextView
                    android:id="@+id/legalAndPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/legal_and_privacy"
                    android:textColor="@color/text_link" />
        -->

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="Version : 1.0.0"
            android:textColor="@color/text_grey" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
